--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="img/photo.jpeg" alt="" class = "photo">
           <p class = "desc"></p>
 
-          <a href="contact.html"><button type="button">Me contacter</button></a>
+          <a href=" https://heleneshr.github.io/my-contact/"><button type="button">Me contacter</button></a>
 
           <div class="subCard">
             <h2>Formation</h2>
